fixed problems with scaling on mobile devices

--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -20,6 +20,46 @@
   width: 70%;
 }
 
+@media screen and (max-width: 360px) {
+  /* comes into effect for screens less than or equal to 320 pixels */
+  .App {
+    width: 95% ;
+  }
+  .books-logo {
+    width: 95%;
+  }
+  .input {
+    width: 95%;
+  }
+}
+@media screen and (min-width: 361px) and (max-width: 480px) {
+  /* comes into effect for screens between 321 and 480 pixels (inclusive) */
+  .App {
+    width: 95% ;
+  }
+  .books-logo {
+    width: 95%;
+  }
+}
+@media screen and (min-width: 481px) and (max-width: 600px) {
+  /* comes into effect for screens larger than or equal to 481 pixels */
+  .App {
+    width: 95% ;
+  }
+}
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+  /* comes into effect for screens larger than or equal to 481 pixels */
+  .App {
+    width: 95% ;
+  }
+}
+@media screen and (min-width: 1025px) {
+  /* comes into effect for screens larger than or equal to 481 pixels */
+  .App {
+    width: 80% ;
+  }
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
