--- a/src/components/styles/Styles.css
+++ b/src/components/styles/Styles.css
@@ -35,3 +35,55 @@ a {
     margin-top: 8px;
     margin-bottom: 8px;
 }
+
+@media screen and (max-width: 360px) {
+    /* comes into effect for screens less than or equal to 320 pixels */
+   
+    .card {
+        padding: 0px 20px;
+        text-align: center;
+    }
+    .description {
+        float: center;
+        width: 90%;
+    }
+}
+@media screen and (min-width: 361px) and (max-width: 480px) {
+    /* comes into effect for screens between 321 and 480 pixels (inclusive) */
+   
+    .card {
+        padding: 0px 20px;
+        text-align: center;
+    }
+      .description {
+        float: center;
+        width: 90%;
+    }
+}
+@media screen and (min-width: 481px) and (max-width: 600px) {
+    /* comes into effect for screens larger than or equal to 481 pixels */
+    .card {
+        text-align: center;
+    }
+    .description {
+        float: center;
+        width: 90%;
+    }
+}
+@media screen and (min-width: 601px) and (max-width: 1024px) {
+    /* comes into effect for screens larger than or equal to 481 pixels */
+    .card {
+        text-align: center;
+    }
+    .description {
+        float: center;
+        width: 90%;
+    }
+}
+@media screen and (min-width: 1025px) {
+    /* comes into effect for screens larger than or equal to 481 pixels */
+    .App {
+      width: 80% ;
+    }
+}
+  
